function: goods template